Fixes bbcode collapse header padding rule being overridden

--- a/scss/_bbcode.scss
+++ b/scss/_bbcode.scss
@@ -222,7 +222,7 @@ div.indentText {
   }
 }
 
-.bbcode-collapse-header {
+.card-header.bbcode-collapse-header {
   font-weight: bold;
   cursor: pointer;
   width: 100%;
